# NSF

./: .gitignore  NSF-Terminated-Awards.csv  README.md  data_wrangling.ipynb  data_wrangling_evan.ipynb  lda_topics_by_division.xlsx  main.py  pyproject.toml  riley_ragas_analysis.ipynb  riley_tfidf_semantic_similarity_and_changepoint.ipynb  subtopic_clustering_teddy.ipynb
data/: NSF-Terminated-Awards.csv
lda_modeling/: README.md  constants.py  data_cleaning.py  data_loading.py  export.py  lda_modeling.py  main.py  subtopic_clustering.py  text_preprocessing.py
models/: banned_words.py
models/stopwords/: english
notebooks/: data_wrangling.ipynb  lda_model_generation.ipynb
nsf_package/: README.md  __init__.py  data_cleaning.py  data_loading.py  export.py  lda_modeling.py  main.py  models.py  text_preprocessing.py
rewrite_nsf_abstract/: README.md  app.py  requirements.txt
tfidf_semantic_changepoint/: README.md  __init__.py  changepoint_detection.py  main.py  semantic_similarity.py  tfidf_analysis.py
