[project]
name = "nsf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "gensim>=4.4.0",
    "google>=3.0.0",
    "google-genai>=1.54.0",
    "gradio>=6.0.2",
    "ipykernel>=7.1.0",
    "little-mallet-wrapper>=0.5.0",
    "matplotlib>=3.10.7",
    "nltk>=3.9.2",
    "numpy>=2.3.4",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pip>=25.3",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.1.2",
    "spacy>=3.8.11",
    "xlsxwriter>=3.2.9",
]
